# cosmic-ext-applet-uptime-indicator

./: Cargo.toml  README.md
src/: app.rs  main.rs
