[package]
name = "cosmic-ext-applet-uptime-indicator"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.9.1"
rust-embed = "8.3.0"
serde = "1.0.209"
procfs = "0.14"


i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }



[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
    "applet",
    "wayland",
    #"multi-window",
    #"winit",
    #"wgpu",
]